--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 #
 
 -i https://pypi.org/simple
+autoenv==1.0.0
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 flask==1.1.2
 gunicorn==20.0.4
